# timelapse

./: .gitignore  BENCHMARKS.md  Cargo.toml  PLAN.md  README.md  REVIEW_VALIDATION_AND_FIX_PLAN.md  STATUS.md  TL-CLIENT-GUIDE.md  build.sh  tl-client.sh
.cargo/: config.toml
.claude/: settings.local.json
benches/: core_bench.rs
crates/cli/: Cargo.toml
crates/cli/src/: daemon.rs  data_access.rs  diff_utils.rs  ipc.rs  locks.rs  main.rs  util.rs
crates/cli/src/cmd/: branch.rs  config.rs  diff.rs  fetch.rs  gc.rs  info.rs  init.rs  log.rs  merge.rs  mod.rs  pin.rs  publish.rs  pull.rs  push.rs  resolve.rs  restore.rs  show.rs  start.rs  status.rs  stop.rs  worktree_add.rs  worktree_list.rs  worktree_remove.rs  worktree_switch.rs
crates/cli/tests/: workflows_integration.rs
crates/cli/tests/common/: cli.rs  fixtures.rs  mod.rs
crates/cli/tests/workflows/: checkpoint_lifecycle.rs  deep_history.rs  edge_cases.rs  large_files.rs  mod.rs  pin_unpin_gc.rs  publish_pull.rs  restore_rewind.rs
crates/core/: Cargo.toml
crates/core/src/: blob.rs  hash.rs  lib.rs  store.rs  tree.rs
crates/jj/: Cargo.toml
crates/jj/src/: conflicts.rs  export.rs  git_ops.rs  lib.rs  mapping.rs  materialize.rs  merge.rs  publish.rs  workspace.rs
crates/journal/: Cargo.toml
crates/journal/src/: checkpoint.rs  incremental.rs  journal.rs  lib.rs  pathmap.rs  retention.rs
crates/journal/tests/: symlink_permission.rs
crates/seer-cli/: Cargo.toml
crates/seer-cli/src/: daemon.rs  main.rs
crates/seer-cli/src/cmd/: diff.rs  init.rs  mod.rs  pin.rs  pull.rs  restore.rs  status.rs  unpin.rs
crates/seer-core/: Cargo.toml
crates/seer-core/src/: lib.rs  store.rs
crates/seer-jj/: Cargo.toml
crates/seer-jj/src/: lib.rs  mapping.rs
crates/seer-journal/: Cargo.toml
crates/seer-journal/src/: checkpoint.rs  incremental.rs  pathmap.rs
crates/seer-watcher/: Cargo.toml
crates/seer-watcher/src/: coalesce.rs  lib.rs
crates/seer-watcher/src/platform/: linux.rs  mod.rs
crates/watcher/: Cargo.toml
crates/watcher/src/: debounce.rs  ignore.rs  lib.rs  reconcile.rs
crates/watcher/src/platform/: macos.rs
docs/: jj-integration.md
docs/examples/: .tlignore
plan-ascending/: 0-INDEX.md  1.md  2.md  3.md  4.md  5.md  6.md  7.md  9.md
