[package]
name = "jj"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# JJ integration
jj-lib = { workspace = true }

# Core dependencies
core = { path = "../core" }
journal = { path = "../journal" }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
