[package]
name = "watcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# File watching
notify = { workspace = true }

# Core dependency
core = { path = "../core" }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }

# Concurrency
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
